// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 1`] = `
<div>
  <div
    style="color: red;"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 2`] = `
<div>
  <div
    style="color: green;"
  >
    rendered: 2x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 3`] = `
<div>
  <div
    style="color: blue;"
  >
    rendered: 3x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 1`] = `
<div>
  <div
    style="color: red;"
  >
    mobile (rendered: 1x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 2`] = `
<div>
  <div
    style="color: green;"
  >
    tablet (rendered: 2x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 3`] = `
<div>
  <div
    style="color: blue;"
  >
    desktop (rendered: 3x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 1`] = `
<div>
  <div
    class="c b a"
    data-trace="
@media (min-width: 1024px).c { color:blue }
@media (min-width: 640px) and (max-width: 1023px).b { color:green }
@media (max-width: 639px).a { color:red }"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 2`] = `
<div>
  <div
    class="c b a"
    data-trace="
@media (min-width: 1024px).c { color:blue }
@media (min-width: 640px) and (max-width: 1023px).b { color:green }
@media (max-width: 639px).a { color:red }"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 3`] = `
<div>
  <div
    class="c b a"
    data-trace="
@media (min-width: 1024px).c { color:blue }
@media (min-width: 640px) and (max-width: 1023px).b { color:green }
@media (max-width: 639px).a { color:red }"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 1`] = `
<div>
  <div
    class="c b a"
    data-trace="
@media (min-width: 1024px).c { color:blue }
@media (min-width: 640px) and (max-width: 1023px).b { color:green }
@media (max-width: 639px).a { color:red }"
  >
    mobile (rendered: 1x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 2`] = `
<div>
  <div
    class="c b a"
    data-trace="
@media (min-width: 1024px).c { color:blue }
@media (min-width: 640px) and (max-width: 1023px).b { color:green }
@media (max-width: 639px).a { color:red }"
  >
    tablet (rendered: 2x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 3`] = `
<div>
  <div
    class="c b a"
    data-trace="
@media (min-width: 1024px).c { color:blue }
@media (min-width: 640px) and (max-width: 1023px).b { color:green }
@media (max-width: 639px).a { color:red }"
  >
    desktop (rendered: 3x)
  </div>
</div>
`;
